# RerankLab

./: .gitignore  Cargo.toml  Dockerfile  EVALUATION.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/reranklab-ai/: Cargo.toml
crates/reranklab-ai/src/: client.rs  error.rs  lib.rs  reranker.rs
crates/reranklab-api/: Cargo.toml
crates/reranklab-api/src/: lib.rs  schema.rs  types.rs
crates/reranklab-core/: Cargo.toml
crates/reranklab-core/src/: error.rs  eval.rs  event.rs  features.rs  lib.rs  ports.rs  rerank.rs  service.rs
crates/reranklab-infra/: Cargo.toml
crates/reranklab-infra/src/: bus.rs  generator.rs  lib.rs  store.rs
crates/reranklab-node/: Cargo.toml
crates/reranklab-node/benches/: rerank_bench.rs
crates/reranklab-node/src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
crates/reranklab-resilience/: Cargo.toml
crates/reranklab-resilience/src/: breaker.rs  clock.rs  lib.rs  rate_limit.rs  retry.rs  timeout.rs
crates/reranklab-types/: Cargo.toml
crates/reranklab-types/src/: candidate.rs  error.rs  ids.rs  lib.rs  metrics.rs  qrel.rs  query.rs
monitoring/: prometheus.yml
postman/: RerankLab.postman_collection.json
