[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
authors = ["Abhijeet Ashok Muneshwar <openingknots@gmail.com>"]
repository = "https://github.com/ABHIJEET-MUNESHWAR/RerankLab"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# GraphQL + web
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }

# Resilience / concurrency
governor = "0.7"
parking_lot = "0.12"
dashmap = "6"
rayon = "1"

# Config / CLI
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Testing / bench
mockall = "0.13"
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

# Internal crates
reranklab-types = { path = "crates/reranklab-types" }
reranklab-resilience = { path = "crates/reranklab-resilience" }
reranklab-core = { path = "crates/reranklab-core" }
reranklab-ai = { path = "crates/reranklab-ai" }
reranklab-infra = { path = "crates/reranklab-infra" }
reranklab-api = { path = "crates/reranklab-api" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
strip = false
