[package]
name = "reranklab-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reranking algorithms, evaluation metrics (NDCG/MRR/Recall/MAP), and ports for RerankLab."

[dependencies]
reranklab-types = { workspace = true }
reranklab-resilience = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
mockall = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
