[package]
name = "reranklab-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RerankLab composition root: wiring, GraphQL/HTTP server, telemetry, and CLI."
default-run = "reranklab"

[[bin]]
name = "reranklab"
path = "src/main.rs"

[[bench]]
name = "rerank_bench"
harness = false

[dependencies]
reranklab-types = { workspace = true }
reranklab-core = { workspace = true }
reranklab-ai = { workspace = true }
reranklab-infra = { workspace = true }
reranklab-resilience = { workspace = true }
reranklab-api = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["full"] }
