[package]
name = "reranklab-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reusable resilience primitives: clock, timeout, retry, circuit breaker, rate limiter."

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
